stat size changed
Signed-off-by: Subramanian <425883@cognizant.com>

--- a/index.html
+++ b/index.html
@@ -755,70 +755,63 @@
                                 </a>
                             </div>
 
-                            <!-- Integrated Statistics Grid -->
-                            <div class="mt-16 animate-slide-up" style="animation-delay: 0.8s;">
-                                <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 lg:gap-8 max-w-5xl mx-auto">
+                            <!-- Integrated Statistics Grid (Reduced Size) -->
+                            <div class="mt-10 animate-slide-up" style="animation-delay: 0.8s;">
+                                <div class="grid grid-cols-2 lg:grid-cols-4 gap-2 lg:gap-4 max-w-3xl mx-auto">
                                     <!-- Stat 1: Accuracy Rate -->
                                     <div class="text-center group cursor-pointer">
-                                        <div class="stat-card relative bg-white bg-opacity-10 backdrop-blur-lg rounded-xl p-4 lg:p-6 border border-white border-opacity-20 hover:bg-opacity-20 transition-all duration-300 transform hover:scale-105">
-                                            <div class="absolute -top-3 left-1/2 transform -translate-x-1/2">
-                                                <div class="w-8 h-8 lg:w-10 lg:h-10 bg-gradient-to-br from-green-400 to-emerald-500 rounded-full flex items-center justify-center shadow-lg pulse-slow">
-                                                    <i class="fas fa-bullseye text-white text-sm lg:text-base"></i>
+                                        <div class="stat-card relative bg-white bg-opacity-10 backdrop-blur-lg rounded-lg p-2 lg:p-3 border border-white border-opacity-20 hover:bg-opacity-20 transition-all duration-300 transform hover:scale-105">
+                                            <div class="absolute -top-2 left-1/2 transform -translate-x-1/2">
+                                                <div class="w-6 h-6 lg:w-8 lg:h-8 bg-gradient-to-br from-green-400 to-emerald-500 rounded-full flex items-center justify-center shadow-lg pulse-slow">
+                                                    <i class="fas fa-bullseye text-white text-xs lg:text-sm"></i>
                                                 </div>
                                             </div>
-                                            <div class="pt-3 lg:pt-4">
-                                                <div class="text-2xl lg:text-3xl font-bold text-white mb-1 font-display">99.9%</div>
-                                                <div class="text-green-300 font-semibold text-xs lg:text-sm">Accuracy Rate</div>
+                                            <div class="pt-2 lg:pt-3">
+                                                <div class="text-lg lg:text-xl font-bold text-white mb-1 font-display">99.9%</div>
+                                                <div class="text-green-300 font-semibold text-xs">Accuracy</div>
                                             </div>
-                                            <div class="absolute bottom-0 left-0 right-0 h-0.5 bg-gradient-to-r from-green-400 to-emerald-500 rounded-b-xl transform scale-x-0 group-hover:scale-x-100 transition-transform duration-300"></div>
                                         </div>
                                     </div>
-
                                     <!-- Stat 2: Tests Completed -->
                                     <div class="text-center group cursor-pointer">
-                                        <div class="stat-card relative bg-white bg-opacity-10 backdrop-blur-lg rounded-xl p-4 lg:p-6 border border-white border-opacity-20 hover:bg-opacity-20 transition-all duration-300 transform hover:scale-105">
-                                            <div class="absolute -top-3 left-1/2 transform -translate-x-1/2">
-                                                <div class="w-8 h-8 lg:w-10 lg:h-10 bg-gradient-to-br from-blue-400 to-indigo-500 rounded-full flex items-center justify-center shadow-lg pulse-slow" style="animation-delay: 0.5s;">
-                                                    <i class="fas fa-vials text-white text-sm lg:text-base"></i>
+                                        <div class="stat-card relative bg-white bg-opacity-10 backdrop-blur-lg rounded-lg p-2 lg:p-3 border border-white border-opacity-20 hover:bg-opacity-20 transition-all duration-300 transform hover:scale-105">
+                                            <div class="absolute -top-2 left-1/2 transform -translate-x-1/2">
+                                                <div class="w-6 h-6 lg:w-8 lg:h-8 bg-gradient-to-br from-blue-400 to-indigo-500 rounded-full flex items-center justify-center shadow-lg pulse-slow" style="animation-delay: 0.5s;">
+                                                    <i class="fas fa-vials text-white text-xs lg:text-sm"></i>
                                                 </div>
                                             </div>
-                                            <div class="pt-3 lg:pt-4">
-                                                <div class="text-2xl lg:text-3xl font-bold text-white mb-1 font-display">50K+</div>
-                                                <div class="text-blue-300 font-semibold text-xs lg:text-sm">Tests Completed</div>
+                                            <div class="pt-2 lg:pt-3">
+                                                <div class="text-lg lg:text-xl font-bold text-white mb-1 font-display">50K+</div>
+                                                <div class="text-blue-300 font-semibold text-xs">Tests</div>
                                             </div>
-                                            <div class="absolute bottom-0 left-0 right-0 h-0.5 bg-gradient-to-r from-blue-400 to-indigo-500 rounded-b-xl transform scale-x-0 group-hover:scale-x-100 transition-transform duration-300"></div>
                                         </div>
                                     </div>
-
                                     <!-- Stat 3: Service Availability -->
                                     <div class="text-center group cursor-pointer">
-                                        <div class="stat-card relative bg-white bg-opacity-10 backdrop-blur-lg rounded-xl p-4 lg:p-6 border border-white border-opacity-20 hover:bg-opacity-20 transition-all duration-300 transform hover:scale-105">
-                                            <div class="absolute -top-3 left-1/2 transform -translate-x-1/2">
-                                                <div class="w-8 h-8 lg:w-10 lg:h-10 bg-gradient-to-br from-yellow-400 to-orange-500 rounded-full flex items-center justify-center shadow-lg pulse-slow" style="animation-delay: 1s;">
-                                                    <i class="fas fa-clock text-white text-sm lg:text-base"></i>
+                                        <div class="stat-card relative bg-white bg-opacity-10 backdrop-blur-lg rounded-lg p-2 lg:p-3 border border-white border-opacity-20 hover:bg-opacity-20 transition-all duration-300 transform hover:scale-105">
+                                            <div class="absolute -top-2 left-1/2 transform -translate-x-1/2">
+                                                <div class="w-6 h-6 lg:w-8 lg:h-8 bg-gradient-to-br from-yellow-400 to-orange-500 rounded-full flex items-center justify-center shadow-lg pulse-slow" style="animation-delay: 1s;">
+                                                    <i class="fas fa-clock text-white text-xs lg:text-sm"></i>
                                                 </div>
                                             </div>
-                                            <div class="pt-3 lg:pt-4">
-                                                <div class="text-2xl lg:text-3xl font-bold text-white mb-1 font-display">24/7</div>
-                                                <div class="text-yellow-300 font-semibold text-xs lg:text-sm">Service Available</div>
+                                            <div class="pt-2 lg:pt-3">
+                                                <div class="text-lg lg:text-xl font-bold text-white mb-1 font-display">24/7</div>
+                                                <div class="text-yellow-300 font-semibold text-xs">Service</div>
                                             </div>
-                                            <div class="absolute bottom-0 left-0 right-0 h-0.5 bg-gradient-to-r from-yellow-400 to-orange-500 rounded-b-xl transform scale-x-0 group-hover:scale-x-100 transition-transform duration-300"></div>
                                         </div>
                                     </div>
-
                                     <!-- Stat 4: Years Experience -->
                                     <div class="text-center group cursor-pointer">
-                                        <div class="stat-card relative bg-white bg-opacity-10 backdrop-blur-lg rounded-xl p-4 lg:p-6 border border-white border-opacity-20 hover:bg-opacity-20 transition-all duration-300 transform hover:scale-105">
-                                            <div class="absolute -top-3 left-1/2 transform -translate-x-1/2">
-                                                <div class="w-8 h-8 lg:w-10 lg:h-10 bg-gradient-to-br from-purple-400 to-pink-500 rounded-full flex items-center justify-center shadow-lg pulse-slow" style="animation-delay: 1.5s;">
-                                                    <i class="fas fa-award text-white text-sm lg:text-base"></i>
+                                        <div class="stat-card relative bg-white bg-opacity-10 backdrop-blur-lg rounded-lg p-2 lg:p-3 border border-white border-opacity-20 hover:bg-opacity-20 transition-all duration-300 transform hover:scale-105">
+                                            <div class="absolute -top-2 left-1/2 transform -translate-x-1/2">
+                                                <div class="w-6 h-6 lg:w-8 lg:h-8 bg-gradient-to-br from-purple-400 to-pink-500 rounded-full flex items-center justify-center shadow-lg pulse-slow" style="animation-delay: 1.5s;">
+                                                    <i class="fas fa-award text-white text-xs lg:text-sm"></i>
                                                 </div>
                                             </div>
-                                            <div class="pt-3 lg:pt-4">
-                                                <div class="text-2xl lg:text-3xl font-bold text-white mb-1 font-display">10+</div>
-                                                <div class="text-purple-300 font-semibold text-xs lg:text-sm">Years Experience</div>
+                                            <div class="pt-2 lg:pt-3">
+                                                <div class="text-lg lg:text-xl font-bold text-white mb-1 font-display">10+</div>
+                                                <div class="text-purple-300 font-semibold text-xs">Years</div>
                                             </div>
-                                            <div class="absolute bottom-0 left-0 right-0 h-0.5 bg-gradient-to-r from-purple-400 to-pink-500 rounded-b-xl transform scale-x-0 group-hover:scale-x-100 transition-transform duration-300"></div>
                                         </div>
                                     </div>
                                 </div>
